redesign network api