@@ -1,33 +1,34 @@
 package javasabr.rlib.network;
 
-import static java.util.stream.Collectors.toList;
-import static javasabr.rlib.network.NetworkFactory.newDefaultClientNetwork;
-import static javasabr.rlib.network.NetworkFactory.newDefaultServerNetwork;
 import static javasabr.rlib.network.ServerNetworkConfig.DEFAULT_SERVER;
 
+import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.IntStream;
 import javasabr.rlib.common.util.ObjectUtils;
 import javasabr.rlib.common.util.StringUtils;
-import javasabr.rlib.logger.api.Logger;
-import javasabr.rlib.logger.api.LoggerManager;
-import javasabr.rlib.network.annotation.PacketDescription;
+import javasabr.rlib.network.annotation.NetworkPacketDescription;
 import javasabr.rlib.network.impl.DefaultBufferAllocator;
 import javasabr.rlib.network.impl.DefaultConnection;
-import javasabr.rlib.network.packet.impl.DefaultReadablePacket;
-import javasabr.rlib.network.packet.impl.DefaultWritablePacket;
-import javasabr.rlib.network.packet.registry.ReadablePacketRegistry;
+import javasabr.rlib.network.packet.MarkerNetworkPacket;
+import javasabr.rlib.network.packet.impl.DefaultReadableNetworkPacket;
+import javasabr.rlib.network.packet.impl.DefaultWritableNetworkPacket;
+import javasabr.rlib.network.packet.registry.ReadableNetworkPacketRegistry;
+import javasabr.rlib.network.server.ServerNetwork;
+import lombok.CustomLog;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.ToString;
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -36,16 +37,15 @@ import org.junit.jupiter.api.Test;
  *
  * @author JavaSaBr
  */
+@CustomLog
 public class DefaultNetworkTest extends BaseNetworkTest {
-
-  private static final Logger LOGGER = LoggerManager.getLogger(DefaultNetworkTest.class);
 
   // client packets
   interface ClientPackets {
 
     @RequiredArgsConstructor
-    @PacketDescription(id = 1)
-    class RequestEchoMessage extends DefaultWritablePacket {
+    @NetworkPacketDescription(id = 1)
+    class RequestEchoMessage extends DefaultWritableNetworkPacket {
 
       private final String message;
 
@@ -56,34 +56,35 @@ public class DefaultNetworkTest extends BaseNetworkTest {
       }
     }
 
-    @PacketDescription(id = 2)
-    class RequestServerTime extends DefaultWritablePacket {}
+    @NetworkPacketDescription(id = 2)
+    class RequestServerTime extends DefaultWritableNetworkPacket implements MarkerNetworkPacket {}
 
     @ToString
     @RequiredArgsConstructor
-    @PacketDescription(id = 3)
-    class ResponseEchoMessage extends DefaultReadablePacket {
+    @NetworkPacketDescription(id = 3)
+    class ResponseEchoMessage extends DefaultReadableNetworkPacket {
 
       @Getter
+      @Nullable
       private volatile String message;
 
       @Override
-      protected void readImpl(DefaultConnection connection, ByteBuffer buffer) {
-        super.readImpl(connection, buffer);
-        message = readString(buffer);
+      protected void readImpl(ByteBuffer buffer) {
+        message = readString(buffer, Integer.MAX_VALUE);
       }
     }
 
     @ToString
-    @PacketDescription(id = 4)
-    class ResponseServerTime extends DefaultReadablePacket {
+    @NetworkPacketDescription(id = 4)
+    class ResponseServerTime extends DefaultReadableNetworkPacket {
 
       @Getter
+      @Nullable
       private volatile LocalDateTime localDateTime;
 
       @Override
-      protected void readImpl(DefaultConnection connection, ByteBuffer buffer) {
-        super.readImpl(connection, buffer);
+      protected void readImpl(ByteBuffer buffer) {
+        super.readImpl(buffer);
         localDateTime = LocalDateTime.ofEpochSecond(readLong(buffer), 0, ZoneOffset.ofTotalSeconds(readInt(buffer)));
       }
     }
@@ -93,43 +94,25 @@ public class DefaultNetworkTest extends BaseNetworkTest {
   interface ServerPackets {
 
     @ToString
-    @PacketDescription(id = 1)
-    class RequestEchoMessage extends DefaultReadablePacket {
+    @NetworkPacketDescription(id = 1)
+    class RequestEchoMessage extends DefaultReadableNetworkPacket {
 
       private volatile String message;
 
       @Override
-      protected void readImpl(DefaultConnection connection, ByteBuffer buffer) {
-        super.readImpl(connection, buffer);
-        message = readString(buffer);
-      }
-
-      @Override
-      protected void executeImpl(DefaultConnection connection) {
-        super.executeImpl(connection);
-        connection.send(new ResponseEchoMessage(message));
+      protected void readImpl(ByteBuffer buffer) {
+        super.readImpl(buffer);
+        message = readString(buffer, Integer.MAX_VALUE);
       }
     }
 
     @ToString
-    @PacketDescription(id = 2)
-    class RequestServerTime extends DefaultReadablePacket {
-
-      @Override
-      protected void readImpl(DefaultConnection connection, ByteBuffer buffer) {
-        super.readImpl(connection, buffer);
-      }
-
-      @Override
-      protected void executeImpl(DefaultConnection connection) {
-        super.executeImpl(connection);
-        connection.send(new ResponseServerTime());
-      }
-    }
+    @NetworkPacketDescription(id = 2)
+    class RequestServerTime extends DefaultReadableNetworkPacket implements MarkerNetworkPacket {}
 
     @RequiredArgsConstructor
-    @PacketDescription(id = 3)
-    class ResponseEchoMessage extends DefaultWritablePacket {
+    @NetworkPacketDescription(id = 3)
+    class ResponseEchoMessage extends DefaultWritableNetworkPacket {
 
       private final String message;
 
@@ -140,19 +123,15 @@ public class DefaultNetworkTest extends BaseNetworkTest {
       }
     }
 
-    @PacketDescription(id = 4)
-    class ResponseServerTime extends DefaultWritablePacket {
+    @NetworkPacketDescription(id = 4)
+    class ResponseServerTime extends DefaultWritableNetworkPacket {
 
       @Override
       protected void writeImpl(ByteBuffer buffer) {
         super.writeImpl(buffer);
         var dateTime = ZonedDateTime.now();
         writeLong(buffer, dateTime.toEpochSecond());
-        writeInt(
-            buffer,
-            dateTime
-                .getOffset()
-                .getTotalSeconds());
+        writeInt(buffer, dateTime.getOffset().getTotalSeconds());
       }
     }
   }
@@ -161,25 +140,37 @@ public class DefaultNetworkTest extends BaseNetworkTest {
   @SneakyThrows
   void echoNetworkTest() {
 
-    var serverNetwork = newDefaultServerNetwork(ReadablePacketRegistry.of(
-        DefaultReadablePacket.class,
+    ReadableNetworkPacketRegistry<DefaultReadableNetworkPacket> serverPackets = ReadableNetworkPacketRegistry.of(
+        DefaultReadableNetworkPacket.class,
         ServerPackets.RequestEchoMessage.class,
-        ServerPackets.RequestServerTime.class));
-    var serverAddress = serverNetwork.start();
+        ServerPackets.RequestServerTime.class);
+    ReadableNetworkPacketRegistry<DefaultReadableNetworkPacket> clientPackets = ReadableNetworkPacketRegistry.of(
+        DefaultReadableNetworkPacket.class,
+        ClientPackets.ResponseEchoMessage.class,
+        ClientPackets.ResponseServerTime.class);
+
+    ServerNetwork<DefaultConnection> serverNetwork = NetworkFactory.defaultServerNetwork(serverPackets);
+    InetSocketAddress serverAddress = serverNetwork.start();
+
     var counter = new CountDownLatch(90);
 
     serverNetwork
         .accepted()
         .flatMap(Connection::receivedEvents)
-        .doOnNext(event -> event.packet.execute(event.connection))
-        .subscribe(event -> LOGGER.info("Received from client: " + event.packet));
+        .doOnNext(event -> {
+          var connection = event.connection();
+          var packet = event.packet();
+          if (packet instanceof ServerPackets.RequestEchoMessage request) {
+            connection.send(new ServerPackets.ResponseEchoMessage(request.message));
+          } else if (packet instanceof ServerPackets.RequestServerTime request) {
+            connection.send(new ServerPackets.ResponseServerTime());
+          }
+        })
+        .subscribe(event -> log.info(event, "Received from client:[%s]"::formatted));
 
-    var clientNetwork = newDefaultClientNetwork(ReadablePacketRegistry.of(
-        DefaultReadablePacket.class,
-        ClientPackets.ResponseEchoMessage.class,
-        ClientPackets.ResponseServerTime.class));
+    var clientNetwork = NetworkFactory.defaultClientNetwork(clientPackets);
     clientNetwork
-        .connected(serverAddress)
+        .connectReactive(serverAddress)
         .doOnNext(connection -> IntStream
             .range(10, 100)
             .forEach(length -> {
@@ -191,7 +182,7 @@ public class DefaultNetworkTest extends BaseNetworkTest {
             }))
         .flatMapMany(Connection::receivedEvents)
         .subscribe(event -> {
-          LOGGER.info("Received from server: " + event.packet);
+          log.info(event, "Received from server:[%s]"::formatted);
           counter.countDown();
         });
 
@@ -206,12 +197,12 @@ public class DefaultNetworkTest extends BaseNetworkTest {
   @Test
   void shouldNotUseMappedBuffers() {
 
-    var serverPacketRegistry = ReadablePacketRegistry.of(
-        DefaultReadablePacket.class,
+    var serverPacketRegistry = ReadableNetworkPacketRegistry.of(
+        DefaultReadableNetworkPacket.class,
         ServerPackets.RequestEchoMessage.class,
         ServerPackets.RequestServerTime.class);
-    var clientPacketRegistry = ReadablePacketRegistry.of(
-        DefaultReadablePacket.class,
+    var clientPacketRegistry = ReadableNetworkPacketRegistry.of(
+        DefaultReadableNetworkPacket.class,
         ClientPackets.ResponseEchoMessage.class,
         ClientPackets.ResponseServerTime.class);
 
@@ -233,32 +224,32 @@ public class DefaultNetworkTest extends BaseNetworkTest {
 
     int packetCount = 200;
 
-    try (var testNetwork = buildDefaultNetwork(
+    try (TestNetwork<DefaultConnection> testNetwork = buildDefaultNetwork(
         serverAllocator,
         serverPacketRegistry,
         clientAllocator,
         clientPacketRegistry)) {
 
-      var bufferSize = testNetwork.serverNetworkConfig.getReadBufferSize() / 3;
-
+      int bufferSize = testNetwork.serverNetworkConfig.readBufferSize() / 3;
       var random = ThreadLocalRandom.current();
 
-      var clientToServer = testNetwork.clientToServer;
-      var serverToClient = testNetwork.serverToClient;
+      DefaultConnection clientToServer = testNetwork.clientToServer;
+      DefaultConnection serverToClient = testNetwork.serverToClient;
 
       var pendingPacketsOnServer = serverToClient
           .receivedPackets()
           .buffer(packetCount);
 
-      var messages = IntStream
+      List<String> messages = IntStream
           .range(0, packetCount)
           .mapToObj(value -> StringUtils.generate(random.nextInt(0, bufferSize)))
           .peek(message -> clientToServer.send(new ClientPackets.RequestEchoMessage(message)))
-          .collect(toList());
+          .toList();
 
-      var receivedPackets = ObjectUtils.notNull(pendingPacketsOnServer.blockFirst(Duration.ofSeconds(5)));
+      List<? extends DefaultReadableNetworkPacket> receivedPackets =
+          ObjectUtils.notNull(pendingPacketsOnServer.blockFirst(Duration.ofSeconds(5)));
 
-      Assertions.assertEquals(receivedPackets.size(), packetCount, "Didn't receive all packets");
+      Assertions.assertEquals(packetCount, receivedPackets.size(), "Didn't receive all packets");
 
       var wrongPacket = receivedPackets
           .stream()
